--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="23XufbDHBlhKy2wvMDOypKfHZhvAyneuSqIsp2jrMLI" />
-    <title>JobWriteAI</title>
+    <title>CoverWriteAI</title>
   </head>
   <body>
     <div id="root"></div>
