ch: add dynamic titles

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="23XufbDHBlhKy2wvMDOypKfHZhvAyneuSqIsp2jrMLI" />
-    <title>CoverWriteAI</title>
+    <meta name="description" content="Create custom cover letters that stand out using CoverWriteAI's AI tool. Impress employers and increase your chances of landing your dream job." />
+    <title>Free Cover Letter Creator: Create a Cover Letter Easily</title>
   </head>
   <body>
     <div id="root"></div>
